
2018-05-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: added OrangeC version info
	* warning.def: fixed grammar in warning descriptions
	* cobc.c, flags.def: use "* " instead of "- " to better distinguish
	  descriptions from options

2018-04-26  Dave Pitts <dpitts@cozx.com>

	* cobc.c (reflow_replace_*_format_text): Changed to malloc token based on
	  newline length instead of hardcoded.

2018-04-24  Dave Pitts <dpitts@cozx.com>

	* cobc.c (reflow_replace_*_format_text): BUG #515 malloc'd token to
	  large size.
	* cobc.c (print_replace_text): BUG #515 malloc and realloc newline
	  based on length of tokens.

2018-04-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, config.def: FR #306 added Fujitsu extension
	  SYMBOLIC CONSTANT in SPECIAL-NAMES, effectively defining
	  GLOBAL constants from literals,
	  adjusted by compiler configuration symbolic-constant

2018-04-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* pplex.l: FR #305 for now - skip Fujitsu @OPTIONS

2018-04-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: prevent output file name "-" for all levels but preprocess,
	  allow listing to be output to stdout with listing name "-"
	* cobc.c, flag.def: replaced -tsymbols by -f[no-]tsymbols,
	  added option to suppress specific listing parts with new options
	  -fno-theader, -fno-tmessages, -fno-tsource (see NEWS)
	* parser.y, reserved.c, typeck.c, field.c, tree.c: FR 303
	  added USAGE BIT and PIC 1 as pending (at least parsing
	  of sources containing these should work now)

2018-04-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (process_command_line): minimal size for -tlines=20
	  to prevent endless loops on typos like -tlines=2

2018-04-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_internal_function): prevent SIGSEGV for
	  ANY LENGTH items in LINKAGE when program is first COBOL program