@@ -1,4 +1,11 @@
 
+2018-05-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	Fixed Bug #521 - issues with source cache:
+	* pplex.l (ppopen): deactivated changing \ to / in source names
+	* codegen.c (output_source_cache, output_string_cache,
+	  output_gnucobol_defines): escape \ and " for output to C strings
+
 2018-05-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* cobc.c: added OrangeC version info
